--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ layout: default
 <h2>Analytics</h2>
 <p>Payshares statistics and capitalization information.</p>
 <h4>Total Units Issued : 100,000,000,000 XPT</h4>
+<h4>Rate of Inflation : 1%</h4>
 <ul>
 <li><a href="#">Treefunder Payshares Analytics - US - In Development »</a></li>
 </ul>
