--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@ layout: default
 <div class="row">
 <div class="col-sm-6">
 <h2>Download</h2>
-<p>Getting started using the Paytokens Toolset. Our platform is open source and everyone can participate.</p>
+<p>Getting started using the Payshares Toolset. Our platform is open source and everyone can participate.</p>
 <ul>
 <li><a href="https://wallet.paytokens.co">Paywallet »</a></li>
-<li><a href="#">Paytokens for Windows : In Development »</a></li>
-<li><a href="#">Paytokens for OSX : In Development »</a></li>
-<li><a href="#">Paytokens for Android : In Development for Google Play »</a></li>
-<li><a href="#">Paytokens for Android : In Development for the Amazon AppStore »</a></li>
-<li><a href="#">Paytokens for iOS : In Development </a></li>
+<li><a href="#">Payshares for Windows : In Development »</a></li>
+<li><a href="#">Payshares for OSX : In Development »</a></li>
+<li><a href="#">Payshares for Android : In Development for Google Play »</a></li>
+<li><a href="#">Payshares for Android : In Development for the Amazon AppStore »</a></li>
+<li><a href="#">Payshares for iOS : In Development </a></li>
 <li><a href="https://github.com/paytokens">Source Code »</a></li>
 </ul>
 </div>
 <div class="col-sm-6">
 <h2>Analytics</h2>
-<p>Paytokens statistics and capitalization information.</p>
-<h4>Total Units Issued : 1,130,752,380,952 XPT</h4>
+<p>Payshares statistics and capitalization information.</p>
+<h4>Total Units Issued : 100,000,000,000 XPT</h4>
 <ul>
 <li><a href="https://ltc.treefunder.co">Treefunder Litecoin Analytics - US »</a></li>
-<li><a href="#">Treefunder Paytokens Analytics - US - In Development »</a></li>
+<li><a href="#">Treefunder Payshares Analytics - US - In Development »</a></li>
 </ul>
 </div>
 <div class="col-sm-6">
@@ -39,11 +39,9 @@ layout: default
 </div>
 <div class="col-sm-6">
 <h2>Exchange</h2>
-<p>Paytokens market and exchange rate information.</p>
+<p>Payshares market and exchange rate information.</p>
 <ul>
-<li><a href="https://treefunder.co/markets/ltcbtc">Treefunder LTC/BTC Market »</a></li>
-<li><a href="https://treefunder.co/markets/xltbtc">Treefunder XLT/BTC Market »</a></li>
-<li><a href="https://treefunder.co/markets/ltcxlt">Treefunder LTC/XLT Market »</a></li>
+<li><a href="https://treefunder.co/markets/xltbtc">Treefunder XPR/BTC Market »</a></li>
 </ul>
 </div>
 <div class="col-sm-6">
@@ -63,15 +61,15 @@ layout: default
 </div>
 <div class="col-sm-6">
 <h2>Resources</h2>
-<p>Information, documentation, services utilizing Paytokens as a Prime.</p>
+<p>Information, documentation, services utilizing Payshares as a Prime.</p>
 <ul>
-<li><a href="https://github.com/paytokens/paywallet">Paytokens Wallet »</a></li>
-<li>Paytokens Proof-of-Burn: <a href="https://ltc.blockr.io/address/info/LPaytokensxxxxxxxxxxxxxxxxxxYSXa9a">LPaytokensxxxxxxxxxxxxxxxxxxYSXa9a</a> »</li>
+<li><a href="https://github.com/paytokens/paywallet">Payshares Wallet »</a></li>
+<li>Payshares Proof-of-Burn: <a href="https://ltc.blockr.io/address/info/LPaysharesxxxxxxxxxxxxxxxxxxYSXa9a">LPaysharesxxxxxxxxxxxxxxxxxxYSXa9a</a> »</li>
 </ul>
 </div>
 <div class="col-sm-6">
 <h2>Engage</h2>
-<p>Getting started using the Paytokens Network. Our platform is open source and everyone can participate.</p>
+<p>Getting started using the Payshares Network. Our platform is open source and everyone can participate.</p>
 <ul>
 <li><a href="https://czarparty.co/category/8/bounties">Bounties »</a></li>
 </ul>
