--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ layout: default
 <h2>Download</h2>
 <p>Getting started using the Payshares Toolset. Our platform is open source and everyone can participate.</p>
 <ul>
-<li><a href="https://wallet.paytokens.co">Paywallet »</a></li>
+<li><a href="https://wallet.payshares.co">Payshares Wallet »</a></li>
 <li><a href="#">Payshares for Windows : In Development »</a></li>
 <li><a href="#">Payshares for OSX : In Development »</a></li>
 <li><a href="#">Payshares for Android : In Development for Google Play »</a></li>
 <li><a href="#">Payshares for Android : In Development for the Amazon AppStore »</a></li>
 <li><a href="#">Payshares for iOS : In Development </a></li>
-<li><a href="https://github.com/paytokens">Source Code »</a></li>
+<li><a href="https://github.com/payshares">Source Code »</a></li>
 </ul>
 </div>
 <div class="col-sm-6">
@@ -26,7 +26,6 @@ layout: default
 <p>Payshares statistics and capitalization information.</p>
 <h4>Total Units Issued : 100,000,000,000 XPT</h4>
 <ul>
-<li><a href="https://ltc.treefunder.co">Treefunder Litecoin Analytics - US »</a></li>
 <li><a href="#">Treefunder Payshares Analytics - US - In Development »</a></li>
 </ul>
 </div>
@@ -56,7 +55,7 @@ layout: default
 <p>Interact and gain support within public channels of communication.</p>
 <ul>
 <li><a href="https://metronotes.com">Metronotes »</a></li>
-<li><a href="https://plus.google.com/101351875074477400330" rel="publisher">Google+</a> »</li>
+<li><a href="https://www.google.com/+PaysharesXPR" rel="publisher">Google+</a> »</li>
 </ul>
 </div>
 <div class="col-sm-6">
@@ -64,7 +63,6 @@ layout: default
 <p>Information, documentation, services utilizing Payshares as a Prime.</p>
 <ul>
 <li><a href="https://github.com/paytokens/paywallet">Payshares Wallet »</a></li>
-<li>Payshares Proof-of-Burn: <a href="https://ltc.blockr.io/address/info/LPaysharesxxxxxxxxxxxxxxxxxxYSXa9a">LPaysharesxxxxxxxxxxxxxxxxxxYSXa9a</a> »</li>
 </ul>
 </div>
 <div class="col-sm-6">
