--- a/index.html
+++ b/index.html
@@ -10,24 +10,23 @@ layout: default
 <div class="row">
 <div class="col-sm-6">
 <h2>Download</h2>
-<p>Getting started using the Payshares Toolset. Our platform is open source and everyone can participate.</p>
+<p>Getting started using the Divvy Toolset. Our platform is open source and everyone can participate.</p>
 <ul>
-<li><a href="https://client.payshares.co">Payshares Client »</a></li>
-<li><a href="#">Payshares for Windows : In Development »</a></li>
-<li><a href="#">Payshares for OSX : In Development »</a></li>
-<li><a href="#">Payshares for Android : In Development for Google Play »</a></li>
-<li><a href="#">Payshares for Android : In Development for the Amazon AppStore »</a></li>
-<li><a href="#">Payshares for iOS : In Development </a></li>
-<li><a href="https://github.com/payshares">Source Code »</a></li>
+<li><a href="https://client.divvy.co">Divvy Client »</a></li>
+<li><a href="#">Divvy for Windows : In Development »</a></li>
+<li><a href="#">Divvy for OSX : In Development »</a></li>
+<li><a href="#">Divvy for Android : In Development for Google Play »</a></li>
+<li><a href="#">Divvy for Android : In Development for the Amazon AppStore »</a></li>
+<li><a href="#">Divvy for iOS : In Development </a></li>
+<li><a href="https://github.com/divvy">Source Code »</a></li>
 </ul>
 </div>
 <div class="col-sm-6">
 <h2>Analytics</h2>
-<p>Payshares statistics and capitalization information.</p>
-<h4>Total Units Issued : 100,000,000,000 XPT</h4>
-<h4>Rate of Inflation : 1%</h4>
+<p>Divvy statistics and capitalization information.</p>
+<h4>Total Units Issued : 100,000,000,000 XDV</h4>
 <ul>
-<li><a href="#">Treefunder Payshares Analytics - US - In Development »</a></li>
+<li><a href="#">Treefunder Divvy Analytics - US - In Development »</a></li>
 </ul>
 </div>
 <div class="col-sm-6">
@@ -39,9 +38,9 @@ layout: default
 </div>
 <div class="col-sm-6">
 <h2>Exchange</h2>
-<p>Payshares market and exchange rate information.</p>
+<p>Divvy market and exchange rate information.</p>
 <ul>
-<li><a href="https://treefunder.co/markets/xltbtc">Treefunder XPR/BTC Market »</a></li>
+<li><a href="https://treefunder.co/markets/xltbtc">Treefunder XDV/BTC Market »</a></li>
 </ul>
 </div>
 <div class="col-sm-6">
@@ -56,19 +55,19 @@ layout: default
 <p>Interact and gain support within public channels of communication.</p>
 <ul>
 <li><a href="https://metronotes.com">Metronotes »</a></li>
-<li><a href="https://www.google.com/+PaysharesXPR" rel="publisher">Google+</a> »</li>
+<li><a href="https://www.google.com/+DivvyXDV" rel="publisher">Google+</a> »</li>
 </ul>
 </div>
 <div class="col-sm-6">
 <h2>Resources</h2>
-<p>Information, documentation, services utilizing Payshares as a Prime.</p>
+<p>Information, documentation, services utilizing Divvy as a Prime.</p>
 <ul>
-<li><a href="https://github.com/paytokens/paywallet">Payshares Wallet »</a></li>
+<li><a href="https://github.com/paytokens/paywallet">Divvy Wallet »</a></li>
 </ul>
 </div>
 <div class="col-sm-6">
 <h2>Engage</h2>
-<p>Getting started using the Payshares Network. Our platform is open source and everyone can participate.</p>
+<p>Getting started using the Divvy Network. Our platform is open source and everyone can participate.</p>
 <ul>
 <li><a href="https://czarparty.co/category/8/bounties">Bounties »</a></li>
 </ul>
