--- a/features/index.html
+++ b/features/index.html
@@ -7,10 +7,10 @@ permalink: /features/
 <div class="container">
 <h2>Everyone should have access to powerful financial tools.</h2>
 <hr>
-<p>Payshares is an open source protocol for exchange, payments, and remittance forged by Treefunder Incorporated.  At its inception, it is being derived on the Ripple Platform.  Its base components include an open distributed ledger system and native currency payshare units known as XPR.  The Payshares Platform enhances the cryptocurrency industry with near instant extremely low cost transactions with great risk reduction for all participants.</p>
-<p><img src="https://lh4.googleusercontent.com/-wwEdaiAoCtE/VTSD7uv-awI/AAAAAAAAABM/FWm08JiwskE/w1044-h522-no/Payshares-Logo-horizontal.jpg"/></p>
-<p>The Payshares Ledger holds all account information, transactions, and offers available on the network.  Participants on the network are able to reach consensus in average of two to five seconds.  Consensus allows for the network to operate in a distributed fashion.</p>
+<p>Divvy is an open source protocol for exchange, payments, and remittance forged by Treefunder Incorporated.  At its inception, it is being derived on the Ripple Platform.  Its base components include an open distributed ledger system and native currency payshare units known as XDV.  The Divvy Platform enhances the cryptocurrency industry with near instant extremely low cost transactions with great risk reduction for all participants.</p>
+<p><img src="https://lh4.googleusercontent.com/-wwEdaiAoCtE/VTSD7uv-awI/AAAAAAAAABM/FWm08JiwskE/w1044-h522-no/Divvy-Logo-horizontal.jpg"/></p>
+<p>The Divvy Ledger holds all account information, transactions, and offers available on the network.  Participants on the network are able to reach consensus in average of two to five seconds.  Consensus allows for the network to operate in a distributed fashion.</p>
 <p>Everyone is able to participate and contribute computational power to the network on standard hardware.  Standard Servers reduce storage requirements by maintaining a recent snapshot of the ledger.  Trusted Nodes such as those in operation by Treefunder will maintain the full ledger.</p>
-<p>Every feature currently available in its competitors is also currently available for Payshares.  Unique to Payshares is the expansion capabilities of its distributed exchange.  Unlike its competition, Treefunder is developing a bridge for Payshares to the 7 Trillion Units of cryptocurrency it commands, opening up asset management opportunities previously only achievable by centralized financial systems.</p>
+<p>Every feature currently available in its competitors is also currently available for Divvy.  Unique to Divvy is the expansion capabilities of its distributed exchange.  Unlike its competition, Treefunder is developing a bridge for Divvy to the 7 Trillion Units of cryptocurrency it commands, opening up asset management opportunities previously only achievable by centralized financial systems.</p>
 </div>
 </div>
